# koro-i18n

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  API_CACHING_STRATEGY.md  API_KEYS.md  ARCHITECTURE_FINAL.md  BACKEND_FRONTEND_REFACTOR.md  CACHE_EXAMPLES.md  CACHE_OPTIMIZATION_SUMMARY.md  CACHING.md  CLIENT_SETUP.md  CPU_OPTIMIZATION.md  DEPLOYMENT.md  DEPLOY_WORKERS.md  DIFFERENTIAL_UPLOAD_CLEANUP.md  DOP_REFACTORING.md  Dockerfile  ELM_MIGRATION.md  EXAMPLE_translation_status_integration.ts  FRONTEND_REFACTOR_SUMMARY.md  GITHUB_API_USAGE.md  I18N_IMPLEMENTATION.md  I18N_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CACHING.md  IMPLEMENTATION_SUMMARY_HISTORY.md  IMPLEMENTATION_SUMMARY_PRISMA.md  METADATA_STRUCTURE_UPDATE.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  OIDC_SETUP.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING_API_CACHE.md  REFACTORING_COMPLETE.md  (+27 more)
client-library/: Gemfile  README.md  Rakefile  koro_i18n-3.0.0.gem  koro_i18n.gemspec  package-lock.json  package.json  tsconfig.json
client-library-typescript-old/: package.json  pnpm-lock.yaml  tsconfig.json
docs/: API.md  ARCHITECTURE.md  BACKEND_API.md  BACKEND_DEPLOYMENT.md  BACKEND_INTERNALS.md  BFF_API.md  CLIENT_LIBRARY.md  CLIENT_OPTIMIZATION.md  CLIENT_SETUP.md  COLOR_TOKENS.md  COMPONENT_STRUCTURE.md  COMPUTATION_FLOW.md  COMPUTATION_STRATEGY.md  DEPLOYMENT.md  (+28 more)
rust-worker/: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  build.sh  wrangler.toml
rust-worker/src/: lib.rs
(+466 files in other folders)
