[package]
name = "koro_compute_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.7", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rmp-serde = "1.3"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "js"] }
chrono = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units for better optimization
panic = "abort"     # Remove panic infrastructure
strip = true        # Strip symbols
